--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "pyproject"
+name = "lacuscore"
 version = "0.0.1"
-description = "Python CLI and module for project"
+description = "Core of Lacus, usable as a module"
 authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
 license = "BSD-3-Clause"
 
@@ -25,23 +25,24 @@ classifiers = [
 
 include = ['README.md']
 
-[tool.poetry.scripts]
-client = 'pyproject:main'
-
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.28.1"
 Sphinx = { version = "^5.1.1", optional = true }
+playwrightcapture = "^1.15.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.971"
-types-requests = "^2.28.9"
-ipython = "^8.4.0"
-pytest = "^7.1.2"
+types-requests = "^2.28.10"
+ipython = "^8.5.0"
+pytest = "^7.1.3"
 
 [tool.poetry.extras]
 docs = ["Sphinx"]
 
+[tool.poetry.group.dev.dependencies]
+types-redis = "^4.3.20"
+
 [build-system]
-requires = ["poetry_core>=1.0"]
+requires = ["poetry_core>=1.1"]
 build-backend = "poetry.core.masonry.api"
