--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ python = "^3.8"
 requests = "^2.28.1"
 Sphinx = { version = "^5.1.1", optional = true }
 playwrightcapture = "^1.15.1"
+Werkzeug = "2.1.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.971"
