--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lacuscore"
-version = "0.3.5"
+version = "0.3.6"
 description = "Core of Lacus, usable as a module"
 authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
 license = "BSD-3-Clause"
@@ -31,6 +31,7 @@ requests = "^2.28.1"
 Sphinx = { version = "^5.2.2", optional = true }
 playwrightcapture = "^1.15.3"
 defang = "^0.5.3"
+ua-parser = "^0.16.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.981"
