--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,16 +28,17 @@ include = ['README.md']
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.28.1"
-Sphinx = { version = "^5.2.3", optional = true }
+Sphinx = { version = "^5.3.0", optional = true }
 playwrightcapture = "^1.15.9"
 defang = "^0.5.3"
 ua-parser = "^0.16.1"
+redis = {version = "^4.3.4", extras = ["hiredis"]}
 
 [tool.poetry.extras]
 docs = ["Sphinx"]
 
 [tool.poetry.group.dev.dependencies]
-types-redis = "^4.3.21.1"
+types-redis = "^4.3.21.2"
 mypy = "^0.982"
 types-requests = "^2.28.11.2"
 ipython = "^8.5.0"
