--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install poetry
       run: |
         python -m pip install --upgrade pip poetry
-        poetry install
+        poetry install --with dev
 
     - name: Test with MyPy
       run: |
