--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "lacuscore"
-version = "1.2.7"
+version = "1.3.0"
 description = "Core of Lacus, usable as a module"
 authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
 license = "BSD-3-Clause"
+repository = "https://github.com/ail-project/LacusCore"
+documentation = "https://lacuscore.readthedocs.io/en/latest/"
 
 readme = "README.md"
 
@@ -29,7 +31,7 @@ include = ['README.md']
 python = "^3.8"
 requests = "^2.28.2"
 Sphinx = { version = "^6.1.3", optional = true }
-playwrightcapture = {extras = ["recaptcha"], version = "^1.17.6"}
+playwrightcapture = {extras = ["recaptcha"], version = "^1.18.0"}
 defang = "^0.5.3"
 ua-parser = "^0.16.1"
 redis = {version = "^4.5.1", extras = ["hiredis"]}
@@ -38,10 +40,10 @@ redis = {version = "^4.5.1", extras = ["hiredis"]}
 docs = ["Sphinx"]
 
 [tool.poetry.group.dev.dependencies]
-types-redis = "^4.5.1.3"
+types-redis = "^4.5.1.4"
 mypy = "^1.0.1"
-types-requests = "^2.28.11.14"
-ipython = "^8.10.0"
+types-requests = "^2.28.11.15"
+ipython = "^8.11.0"
 pytest = "^7.2.1"
 
 [build-system]
