--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,15 +34,15 @@ Sphinx = { version = "^6.1.3", optional = true }
 playwrightcapture = {extras = ["recaptcha"], version = "^1.19.0"}
 defang = "^0.5.3"
 ua-parser = "^0.16.1"
-redis = {version = "^4.5.1,!=4.5.2,!=4.5.3", extras = ["hiredis"]}
+redis = {version = "^4.5.4", extras = ["hiredis"]}
 
 [tool.poetry.extras]
 docs = ["Sphinx"]
 
 [tool.poetry.group.dev.dependencies]
-types-redis = {version = "^4.5.1.0,!=4.5.2.0,!=4.5.3.0"}
+types-redis = {version = "^4.5.3.1"}
 mypy = "^1.1.1"
-types-requests = "^2.28.11.16"
+types-requests = "^2.28.11.17"
 ipython = "^8.11.0"
 pytest = "^7.2.2"
 
