--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lacuscore"
-version = "1.4.2"
+version = "1.4.3"
 description = "Core of Lacus, usable as a module"
 authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
 license = "BSD-3-Clause"
@@ -47,5 +47,5 @@ ipython = "^8.12.0"
 pytest = "^7.3.0"
 
 [build-system]
-requires = ["poetry_core>=1.2"]
+requires = ["poetry_core"]
 build-backend = "poetry.core.masonry.api"
