--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ include = ['README.md']
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.29.0"
-Sphinx = { version = "^6.2.1", optional = true }
+Sphinx = { version = "^7.0.0", optional = true }
 playwrightcapture = {extras = ["recaptcha"], version = "^1.19.10"}
 defang = "^0.5.3"
 ua-parser = "^0.16.1"
@@ -43,8 +43,11 @@ docs = ["Sphinx"]
 [tool.poetry.group.dev.dependencies]
 types-redis = {version = "^4.5.4.1"}
 mypy = "^1.2.0"
-types-requests = "^2.28.11.17"
-ipython = "^8.13.0"
+types-requests = "^2.29.0.0"
+ipython = [
+    {version = "<8.13.0", python = "<3.9"},
+    {version = "^8.13.0", python = ">=3.9"}
+]
 pytest = "^7.3.1"
 
 [build-system]
