--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ include = ['README.md']
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.31.0"
-Sphinx = { version = "^7.0.1", optional = true }
+Sphinx = { version = "^7.1.2", optional = true }
 playwrightcapture = {extras = ["recaptcha"], version = "^1.21.2"}
 defang = "^0.5.3"
 ua-parser = "^0.18.0"
@@ -44,6 +44,7 @@ docs = ["Sphinx"]
 types-redis = {version = "^4.6.0.3"}
 mypy = "^1.4.1"
 types-requests = "^2.31.0.2"
+types-beautifulsoup4 = "^4.12.0.5"
 ipython = [
     {version = "<8.13.0", python = "<3.9"},
     {version = "^8.13.0", python = ">=3.9"}
