--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ Sphinx = [
    {version = "<7.2", python = "<3.9", optional = true},
    {version = "^7.2", python = ">=3.9", optional = true}
 ]
-playwrightcapture = {extras = ["recaptcha"], version = "^1.22.4"}
+playwrightcapture = {extras = ["recaptcha"], version = "^1.22.5"}
 defang = "^0.5.3"
 ua-parser = "^0.18.0"
 redis = {version = "^5.0.1", extras = ["hiredis"]}
@@ -43,12 +43,13 @@ docs = ["Sphinx"]
 
 [tool.poetry.group.dev.dependencies]
 types-redis = {version = "^4.6.0.11"}
-mypy = "^1.7.1"
+mypy = "^1.8.0"
 types-requests = "^2.31.0.10"
 types-beautifulsoup4 = "^4.12.0.7"
 ipython = [
     {version = "<8.13.0", python = "<3.9"},
-    {version = "^8.13.0", python = ">=3.9"}
+    {version = "^8.18.0", python = ">=3.9"},
+    {version = "^8.19.0", python = ">=3.10"}
 ]
 pytest = "^7.4.3"
 
