--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lacuscore"
-version = "1.7.7"
+version = "1.7.8"
 description = "Core of Lacus, usable as a module"
 authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
 license = "BSD-3-Clause"
@@ -44,14 +44,14 @@ docs = ["Sphinx"]
 [tool.poetry.group.dev.dependencies]
 types-redis = {version = "^4.6.0.11"}
 mypy = "^1.8.0"
-types-requests = "^2.31.0.10"
+types-requests = "^2.31.0.20231231"
 types-beautifulsoup4 = "^4.12.0.7"
 ipython = [
     {version = "<8.13.0", python = "<3.9"},
     {version = "^8.18.0", python = ">=3.9"},
     {version = "^8.19.0", python = ">=3.10"}
 ]
-pytest = "^7.4.3"
+pytest = "^7.4.4"
 
 [build-system]
 requires = ["poetry_core"]
