--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ Sphinx = [
    {version = "<7.2", python = "<3.9", optional = true},
    {version = "^7.2", python = ">=3.9", optional = true}
 ]
-playwrightcapture = {extras = ["recaptcha"], version = "^1.22.5"}
+playwrightcapture = {extras = ["recaptcha"], version = "^1.22.6"}
 defang = "^0.5.3"
 ua-parser = "^0.18.0"
 redis = {version = "^5.0.1", extras = ["hiredis"]}
@@ -42,10 +42,10 @@ redis = {version = "^5.0.1", extras = ["hiredis"]}
 docs = ["Sphinx"]
 
 [tool.poetry.group.dev.dependencies]
-types-redis = {version = "^4.6.0.11"}
+types-redis = {version = "^4.6.0.20240106"}
 mypy = "^1.8.0"
-types-requests = "^2.31.0.20231231"
-types-beautifulsoup4 = "^4.12.0.7"
+types-requests = "^2.31.0.20240106"
+types-beautifulsoup4 = "^4.12.0.20240106"
 ipython = [
     {version = "<8.13.0", python = "<3.9"},
     {version = "^8.18.0", python = ">=3.9"},
