--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lacuscore"
-version = "1.8.7"
+version = "1.8.8"
 description = "Core of Lacus, usable as a module"
 authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
 license = "BSD-3-Clause"
@@ -34,11 +34,12 @@ Sphinx = [
    {version = "<7.2", python = "<3.9", optional = true},
    {version = "^7.2", python = ">=3.9", optional = true}
 ]
-playwrightcapture = {extras = ["recaptcha"], version = "^1.23.8"}
+playwrightcapture = {extras = ["recaptcha"], version = "^1.23.9"}
 defang = "^0.5.3"
 ua-parser = "^0.18.0"
-redis = {version = "^5.0.1", extras = ["hiredis"]}
+redis = {version = "^5.0.2", extras = ["hiredis"]}
 dnspython = "^2.6.1"
+async-timeout = {version = "^4.0.3", python = "<3.11"}
 
 [tool.poetry.extras]
 docs = ["Sphinx"]
@@ -47,7 +48,7 @@ docs = ["Sphinx"]
 types-redis = {version = "^4.6.0.20240218"}
 mypy = "^1.8.0"
 types-requests = "^2.31.0.20240218"
-types-beautifulsoup4 = "^4.12.0.20240106"
+types-beautifulsoup4 = "^4.12.0.20240229"
 ipython = [
     {version = "<8.13.0", python = "<3.9"},
     {version = "^8.18.0", python = ">=3.9"},
