--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ ua-parser = "^0.18.0"
 redis = {version = "^5.0.7", extras = ["hiredis"]}
 dnspython = "^2.6.1"
 async-timeout = {version = "^4.0.3", python = "<3.11"}
+pydantic = "^2.8.2"
 
 [tool.poetry.extras]
 docs = ["Sphinx"]
