--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ redis = {version = "^5.0.7", extras = ["hiredis"]}
 dnspython = "^2.6.1"
 async-timeout = {version = "^4.0.3", python = "<3.11"}
 pydantic = "^2.8.2"
+eval-type-backport = {version = "^0.2.0", python = "<3.10"}
 
 [tool.poetry.extras]
 docs = ["Sphinx"]
