new: Use valkey-glide instead of redis package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,18 +38,17 @@ Sphinx = [
 playwrightcapture = {extras = ["recaptcha"], version = "^1.25.15"}
 defang = "^0.5.3"
 ua-parser = "^0.18.0"
-redis = {version = "^5.0.8", extras = ["hiredis"]}
 dnspython = "^2.6.1"
 async-timeout = {version = "^4.0.3", python = "<3.11"}
 pydantic = "^2.9.1"
 eval-type-backport = {version = "^0.2.0", python = "<3.10"}
+valkey-glide = "^1.0.1"
 
 [tool.poetry.extras]
 docs = ["Sphinx"]
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.11.2"
-types-redis = {version = "^4.6.0.20240903"}
 types-requests = "^2.32.0.20240907"
 types-beautifulsoup4 = "^4.12.0.20240907"
 ipython = [
