--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,10 +38,13 @@ Sphinx = [
 playwrightcapture = {extras = ["recaptcha"], version = "^1.26.0"}
 defang = "^0.5.3"
 ua-parser = "^0.18.0"
-redis = {version = "^5.0.8", extras = ["hiredis"]}
-dnspython = "^2.6.1"
+redis = {version = "^5.1.1", extras = ["hiredis"]}
+dnspython = [
+    {version = "<2.7", python = "<3.9"},
+    {version = "^2.7", python = ">=3.9"}
+]
 async-timeout = {version = "^4.0.3", python = "<3.11"}
-pydantic = "^2.9.1"
+pydantic = "^2.9.2"
 eval-type-backport = {version = "^0.2.0", python = "<3.10"}
 
 [tool.poetry.extras]
@@ -49,7 +52,7 @@ docs = ["Sphinx"]
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.11.2"
-types-redis = {version = "^4.6.0.20240903"}
+types-redis = {version = "^4.6.0.20241004"}
 types-requests = "^2.32.0.20240914"
 types-beautifulsoup4 = "^4.12.0.20240907"
 ipython = [
