--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lacuscore"
-version = "1.11.3"
+version = "1.12.0"
 description = "Core of Lacus, usable as a module"
 authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
 license = "BSD-3-Clause"
@@ -18,7 +18,6 @@ classifiers = [
     'Intended Audience :: Telecommunications Industry',
     'Intended Audience :: Information Technology',
     'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
@@ -29,21 +28,17 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 requests = "^2.32.3"
 Sphinx = [
-   {version = "<7.2", python = "<3.9", optional = true},
    {version = "^7.2", python = ">=3.9,<3.10", optional = true},
    {version = "^8", python = ">=3.10", optional = true}
 ]
-playwrightcapture = {extras = ["recaptcha"], version = "^1.26.3"}
+playwrightcapture = {extras = ["recaptcha"], version = "^1.27.0"}
 defang = "^0.5.3"
 ua-parser = "^0.18.0"
 redis = {version = "^5.2.0", extras = ["hiredis"]}
-dnspython = [
-    {version = "<2.7", python = "<3.9"},
-    {version = "^2.7", python = ">=3.9"}
-]
+dnspython = {version = "^2.7.0", python = ">=3.9"}
 async-timeout = {version = "^4.0.3", python = "<3.11"}
 pydantic = "^2.9.2"
 eval-type-backport = {version = "^0.2.0", python = "<3.10"}
@@ -57,7 +52,6 @@ types-redis = {version = "^4.6.0.20241004"}
 types-requests = "^2.32.0.20241016"
 types-beautifulsoup4 = "^4.12.0.20241020"
 ipython = [
-    {version = "<8.13.0", python = "<3.9"},
     {version = "^8.18.0", python = ">=3.9"},
     {version = "^8.19.0", python = ">=3.10"}
 ]
