chg: Bump poetry

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,7 @@ strict = True
 warn_return_any = False
 show_error_context = True
 pretty = True
+follow_untyped_imports = True
 
 [mypy-docs.source.*]
 ignore_errors = True
