--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,13 @@ dynamic = [ "classifiers" ]
 
 dependencies = [
     "requests (>=2.32.3)",
-    "playwrightcapture[recaptcha] (>=1.29.0)",
+    "playwrightcapture[recaptcha] (>=1.29.2)",
     "defang (>=0.5.3)",
     "ua-parser[regex] (>=1.0.1)",
-    "redis [hiredis] (>=5.2.1)",
+    "redis[hiredis] (>=5.3.0,<6.0.0)",
     "dnspython (>=2.7.0)",
     "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
-    "pydantic (>=2.11.3)",
+    "pydantic (>=2.11.4)",
     "eval-type-backport (>=0.2.2) ; python_version < \"3.10\"",
     "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\""
 ]
