--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,12 @@ dynamic = [ "classifiers" ]
 
 dependencies = [
     "requests (>=2.32.5)",
-    "playwrightcapture[recaptcha] (>=1.32.1)",
+    "playwrightcapture[recaptcha] (>=1.32.2)",
     "defang (>=0.5.3)",
     "ua-parser[regex] (>=1.0.1)",
     "redis[hiredis] (>=5.3.0,<6.0.0)",
-    "dnspython (>=2.7.0)",
+    "dnspython (<2.8) ; python_version < \"3.10\"",
+    "dnspython (>=2.8.0) ; python_version >= \"3.10\"",
     "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
     "pydantic (>=2.11.7)",
     "eval-type-backport (>=0.2.2) ; python_version < \"3.10\"",
