--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dynamic = [ "classifiers" ]
 
 dependencies = [
     "requests (>=2.32.5)",
-    "playwrightcapture[recaptcha] (>=1.32.3)",
+    "playwrightcapture[recaptcha] (>=1.32.4)",
     "defang (>=0.5.3)",
     "ua-parser[regex] (>=1.0.1)",
     "redis[hiredis] (>=5.3.0,<6.0.0)",
@@ -24,7 +24,8 @@ dependencies = [
     "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
     "pydantic (>=2.11.7)",
     "eval-type-backport (>=0.2.2) ; python_version < \"3.10\"",
-    "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\""
+    "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\"",
+    "orjson (>=3.11.3,<4.0.0)"
 ]
 
 [project.urls]
@@ -48,7 +49,7 @@ classifiers = [
 docs = ["Sphinx (>=8.2.3) ; python_version >= \"3.11\""]
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.17.1"
+mypy = "^1.18.1"
 types-redis = {version = "^4.6.0.20241004"}
 types-requests = "^2.32.4.20250809"
 types-beautifulsoup4 = "^4.12.0.20250516"
