--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "BSD-3-Clause"
 repository = "https://github.com/ail-project/LacusCore"
 documentation = "https://lacuscore.readthedocs.io/en/latest/"
 readme = "README.md"
-requires-python = ">=3.9.2,<4.0"
+requires-python = ">=3.10,<4.0"
 
 dynamic = [ "classifiers" ]
 
@@ -19,11 +19,9 @@ dependencies = [
     "defang (>=0.5.3)",
     "ua-parser[regex] (>=1.0.1)",
     "redis[hiredis] (>=5.3.0,<6.0.0)",
-    "dnspython (>=2.7,<2.8.0) ; python_version < \"3.10\"",
-    "dnspython (>=2.8.0) ; python_version >= \"3.10\"",
+    "dnspython (>=2.8.0)",
     "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
     "pydantic (>=2.11.9)",
-    "eval-type-backport (>=0.2.2) ; python_version < \"3.10\"",
     "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\"",
     "orjson (>=3.11.3,<4.0.0)"
 ]
