--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,12 @@ dependencies = [
     "playwrightcapture[recaptcha] (>=1.33.0)",
     "defang (>=0.5.3)",
     "ua-parser[regex] (>=1.0.1)",
-    "redis[hiredis] (>=5.3.0,<6.0.0)",
     "dnspython (>=2.8.0)",
     "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
-    "pydantic (>=2.11.9)",
+    "pydantic (>=2.12.0)",
     "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\"",
-    "orjson (>=3.11.3,<4.0.0)"
+    "orjson (>=3.11.3,<4.0.0)",
+    "valkey-glide-sync (>=2.1.1,<3.0.0)"
 ]
 
 [project.urls]
